--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.15.20",
+    "froala-editor": "^4.3.0",
     "mathjs": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
