--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mathjs": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-froala-wysiwyg": "^4.3.0",
     "recharts": "^2.12.7",
     "tailwindcss": "^3.4.4"
   },
